--- a/ruling-api/package.json
+++ b/ruling-api/package.json
@@ -11,10 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-winston": "^4.2.0",
+    "helmet": "^5.0.2",
+    "joi": "^17.6.0",
     "mongoose": "^6.2.11",
+    "morgan": "^1.10.0",
+    "morgan-json": "^1.1.0",
+    "node-cron": "^3.0.0",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.15",
     "winston": "^3.7.2"
   }
