--- a/ruling-api/package.json
+++ b/ruling-api/package.json
@@ -10,6 +10,7 @@
   "author": "Nikolay Ivanov",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "dotenv": "^16.0.0",
