--- a/ruling-api/package.json
+++ b/ruling-api/package.json
@@ -15,6 +15,7 @@
     "cron": "^1.8.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-joi-validation": "^5.0.1",
     "express-winston": "^4.2.0",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
