--- a/message-relay/package.json
+++ b/message-relay/package.json
@@ -17,5 +17,10 @@
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.15",
     "rascal": "^14.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
