--- a/watchdog/package.json
+++ b/watchdog/package.json
@@ -15,5 +15,10 @@
     "nodemon": "^2.0.15",
     "rascal": "^14.4.1",
     "web3": "^1.7.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
