--- a/ruling-api/package.json
+++ b/ruling-api/package.json
@@ -11,6 +11,7 @@
   "author": "Nikolay Ivanov",
   "license": "ISC",
   "dependencies": {
+    "awilix": "^7.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
