--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,8 @@
     "node-schedule": "^2.1.0",
     "nodemon": "^2.0.15",
     "pino": "^8.0.0",
+    "sequelize": "^6.20.1",
+    "sqlite3": "^5.0.8",
     "winston": "^3.7.2"
   },
   "devDependencies": {
